--- a/src/main/resources/static/style/layout.less
+++ b/src/main/resources/static/style/layout.less
@@ -26,6 +26,7 @@ body {
   display: block;
   width: 100vw;
   max-width: 1200px;
+  min-height: 100vh;
   margin: 0 auto;
 }
 
