--- a/src/main/resources/static/style/styles.less
+++ b/src/main/resources/static/style/styles.less
@@ -2,5 +2,7 @@
 
 /* home only */
 body.home {
-  
+  .container-flex {
+    max-height: 100vh;
+  }
 }
